# prompt-guesser

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
backend/: .env.example  Dockerfile  README.md  main.py  manage.py  pyproject.toml  seed_dev_db.py  test_evaluator.py  test_gameplay.py  test_gemini_models.py  test_normalization.py  test_scheduler.py
backend/app/: config.py  database.py  logging.py  main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: gameplay.py  internal.py
backend/app/models/: __init__.py  base.py  challenge.py  game.py
backend/app/schemas/: __init__.py  challenge.py  game.py  health.py
backend/app/services/: __init__.py  cleanup.py  cron.py  gameplay.py  generation.py  scheduler.py  storage.py
backend/app/services/ai/: __init__.py  client.py  embedding_generator.py  exceptions.py  image_generator.py  prompt_generator.py  schemas.py
backend/app/services/ai/image/: __init__.py  base.py  factory.py
backend/app/services/ai/image/providers/: huggingface.py  mock.py
backend/app/services/evaluation/: __init__.py  base.py
backend/app/services/evaluation/providers/: __init__.py  gemini.py  jaccard.py
backend/migrations/: env.py
backend/migrations/versions/: 6b56a3ef6fe0_make_challenge_columns_nullable.py  7d02c363f9df_initial_mvp_schema.py  958a44081315_gameplay_5_attempts.py  a8d8e9c0b1a2_add_storage_path.py  b8556481fe05_add_player_id_to_game_sessions.py  b9e9d0c1a2b3_remove_embedding_fields.py  e07012490619_daily_challenge_schema.py
frontend/: index.html
(+11 files in other folders)
