[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
# Target Python 3.13 configuration
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), isort (I), and Bugbear (B)
select = ["B", "E", "F", "I", "W"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

